# console-client

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  build-with-docker.sh  cli.c  gitcommit.h  install_debian.sh  overlay_client.c  overlay_client.h  paccountevents.h  papi.c  papi.h  pasyncnet.c  pasyncnet.h  pbusinessaccount.c  pbusinessaccount.h  pcache.c  pcache.h  pcallbacks.c  pcallbacks.h  pcloudcrypto.c  pcloudcrypto.h  pcompat.c  pcompat.h  pcompiler.h  pcompression.c  pcompression.h  pcontacts.c  pcontacts.h  pcrc32c.c  pcrc32c.h  pcrypto.c  pcrypto.h  pdatabase.h  pdevice_monitor.c  pdevice_monitor.h  pdiff.c  (+90 more)
pCloudCC/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.txt  control_tools.cpp  control_tools.h  main.cpp  pclsync_lib.cpp  pclsync_lib.h  pclsync_lib_c.cpp  pclsync_lib_c.h
pCloudCC/debian/: README.Debian  README.source  changelog  control  copyright  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  pcloudcc.cron.d.ex  pcloudcc.default.ex  pcloudcc.doc-base.EX  pcloudcc.substvars  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
pCloudCC/lib/mbedtls/: CMakeLists.txt  Makefile  install_manifest.txt  mbedtls.kdev4
pCloudCC/lib/mbedtls/include/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters
pCloudCC/lib/mbedtls/programs/: INSTALL.vcxproj.filters  Makefile  RUN_TESTS.vcxproj.filters
pCloudCC/lib/mbedtls/programs/aes/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  aescrypt2.vcxproj.filters  crypt_and_hash.vcxproj.filters
pCloudCC/lib/mbedtls/programs/hash/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  generic_sum.vcxproj.filters  hello.vcxproj.filters  md5sum.vcxproj.filters  sha1sum.vcxproj.filters  sha2sum.vcxproj.filters
pCloudCC/lib/mbedtls/programs/pkey/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  dh_client.vcxproj.filters  dh_genprime.vcxproj.filters  dh_server.vcxproj.filters  ecdsa.vcxproj.filters  gen_key.vcxproj.filters  key_app.vcxproj.filters  key_app_writer.vcxproj.filters  mpi_demo.vcxproj.filters  pk_decrypt.vcxproj.filters  pk_encrypt.vcxproj.filters  pk_sign.vcxproj.filters  pk_verify.vcxproj.filters  rsa_decrypt.vcxproj.filters  rsa_encrypt.vcxproj.filters  rsa_genkey.vcxproj.filters  rsa_sign.vcxproj.filters  rsa_sign_pss.vcxproj.filters  rsa_verify.vcxproj.filters  rsa_verify_pss.vcxproj.filters
pCloudCC/lib/mbedtls/programs/random/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  gen_entropy.vcxproj.filters  gen_random_ctr_drbg.vcxproj.filters  gen_random_havege.vcxproj.filters
pCloudCC/lib/mbedtls/programs/ssl/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  mini_client  mini_client.vcxproj.filters  ssl_client1.vcxproj.filters  ssl_client2.vcxproj.filters  ssl_fork_server.vcxproj.filters  ssl_mail_client.vcxproj.filters  ssl_pthread_server.vcxproj.filters  ssl_server.vcxproj.filters  ssl_server2.vcxproj.filters
pCloudCC/lib/mbedtls/programs/test/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  benchmark.vcxproj.filters  selftest.vcxproj.filters  ssl_cert_test.vcxproj.filters  ssl_test.vcxproj.filters
pCloudCC/lib/mbedtls/programs/util/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  pem2der.vcxproj.filters  strerror.vcxproj.filters
pCloudCC/lib/mbedtls/programs/x509/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  cert_app.vcxproj.filters  cert_req.vcxproj.filters  cert_write.vcxproj.filters  crl_app.vcxproj.filters  req_app.vcxproj.filters
pCloudCC/lib/mbedtls/tests/: Makefile
pCloudCC/lib/mbedtls/vc-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MBEDTLS.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  apidoc.vcxproj  apidoc.vcxproj.filters  covtest.vcxproj  covtest.vcxproj.filters  lcov.vcxproj  lcov.vcxproj.filters  memcheck.vcxproj  memcheck.vcxproj.filters  test-ref-config.vcxproj  test-ref-config.vcxproj.filters
pCloudCC/lib/mbedtls/vc-build/include/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
pCloudCC/lib/mbedtls/vc-build/programs/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
pCloudCC/lib/mbedtls/vc-build/programs/aes/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  aescrypt2.vcxproj  aescrypt2.vcxproj.filters  crypt_and_hash.vcxproj  crypt_and_hash.vcxproj.filters
pCloudCC/lib/mbedtls/vc-build/programs/hash/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  generic_sum.vcxproj  generic_sum.vcxproj.filters  hello.vcxproj  hello.vcxproj.filters  md5sum.vcxproj  md5sum.vcxproj.filters  sha1sum.vcxproj  sha1sum.vcxproj.filters  (+2 more)
pCloudCC/lib/pclsync/: Makefile  cli.c  gitcommit.h  gitcommit.h~master  mbedtls-1.3.10.patch  papi.c  papi.h  pasyncnet.c  patch0.patch  patch1.patch  pbusinessaccount.c  pbusinessaccount.h  pcache.c  pcallbacks.c  pcallbacks.h  pcloudcrypto.c  pcloudcrypto.h  pclsync.kdev4  pcompat.c  pcompat.c.rej  pcompat.h  pcompat.h.orig  pcompat.h.rej  pcompiler.h  pcontacts.c  pcrc32c.h  pcrypto.c  pdatabase.h  pdevice_monitor.c  pdevice_monitor.h  pdevicemap.c  pdevicemap.h  pdiff.c  pdiff.h  pdownload.c  pfolder.c  pfolder.h  pfs.c  pfs.h  pfscrypto.c  (+53 more)
pCloudCC/lib/pclsync/lib/poverlay/: Guids.h  MyOverlayIcon.cpp  OverlayIcon.rc  OverlayIcon.vcproj  OverlayIconPS.vcproj  OverlayIconPS.vcxproj  OverlayIcon_i.c  ShellExt.cpp  pCloudNOSYNC.rgs  pCloudNoSync3.rgs  stdafx.cpp
pCloudCC/lib/poverlay_linux/: debug.c  debug.h  overlay_client.c  overlay_client.h  sockets.h
pCloudCC/lib/prjf/: .gitignore  .gitmodules  Makefile  pRJF.c  pRJF.h  test.c
pCloudCC/lib/prjf/lib/curl/: Makefile  config.status  curl-config  libcurl.pc  libtool
pCloudCC/lib/sqlite/: Makefile  config.status  configure  configure.ac  libtool  sqlite3.pc
pCloudCC/lib/sqlite/.deps/: sqlite3-shell.Po  sqlite3-sqlite3.Po  sqlite3.Plo
pCloudCC/lib/sqlite/tea/: configure  configure.ac
pCloudCC/lib/sqlite/tea/generic/: tclsqlite3.c
(+628 files in other folders)
